📦 Fix compile errors