@@ -9,10 +9,12 @@ import com.blamejared.crafttweaker.api.recipe.manager.base.IRecipeManager;
 import com.blamejared.crafttweaker.api.util.IngredientUtil;
 import com.blamejared.crafttweaker.api.util.StringUtil;
 import com.mrcrayfish.furniture.refurbished.crafting.CuttingBoardSlicingRecipe;
+import net.minecraft.core.RegistryAccess;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.item.crafting.Recipe;
+import net.minecraft.world.item.crafting.RecipeHolder;
 
 import java.util.Optional;
 
@@ -23,13 +25,14 @@ import java.util.Optional;
 public class CuttingBoardSlicingRecipeHandler implements IRecipeHandler<CuttingBoardSlicingRecipe>
 {
     @Override
-    public String dumpToCommandString(IRecipeManager<? super CuttingBoardSlicingRecipe> manager, CuttingBoardSlicingRecipe recipe)
+    public String dumpToCommandString(IRecipeManager<? super CuttingBoardSlicingRecipe> manager, RegistryAccess registryAccess, RecipeHolder<CuttingBoardSlicingRecipe> holder)
     {
-        return String.format("%s.addRecipe(%s, %s, %s);",
-                manager.getCommandString(),
-                StringUtil.quoteAndEscape(recipe.getId()),
-                IIngredient.fromIngredient(recipe.getInput()).getCommandString(),
-                IItemStack.ofMutable(recipe.getOutput()).getCommandString());
+        return "%s.addRecipe(%s, %s, %s);".formatted(
+            manager.getCommandString(),
+            StringUtil.quoteAndEscape(holder.id()),
+            IIngredient.fromIngredient(holder.value().getInput()).getCommandString(),
+            IItemStack.ofMutable(holder.value().getOutput()).getCommandString()
+        );
     }
 
     @Override
@@ -42,22 +45,22 @@ public class CuttingBoardSlicingRecipeHandler implements IRecipeHandler<CuttingB
     }
 
     @Override
-    public Optional<IDecomposedRecipe> decompose(IRecipeManager<? super CuttingBoardSlicingRecipe> manager, CuttingBoardSlicingRecipe recipe)
+    public Optional<IDecomposedRecipe> decompose(IRecipeManager<? super CuttingBoardSlicingRecipe> manager, RegistryAccess registryAccess, CuttingBoardSlicingRecipe recipe)
     {
         IDecomposedRecipe decomposedRecipe = IDecomposedRecipe.builder()
-                .with(BuiltinRecipeComponents.Input.INGREDIENTS, IIngredient.fromIngredient(recipe.getInput()))
-                .with(BuiltinRecipeComponents.Output.ITEMS, IItemStack.ofMutable(recipe.getOutput()))
-                .with(BuiltinRecipeComponents.Metadata.GROUP, recipe.getGroup())
-                .build();
+            .with(BuiltinRecipeComponents.Input.INGREDIENTS, IIngredient.fromIngredient(recipe.getInput()))
+            .with(BuiltinRecipeComponents.Output.ITEMS, IItemStack.ofMutable(recipe.getOutput()))
+            .with(BuiltinRecipeComponents.Metadata.GROUP, recipe.getGroup())
+            .build();
         return Optional.of(decomposedRecipe);
     }
 
     @Override
-    public Optional<CuttingBoardSlicingRecipe> recompose(IRecipeManager<? super CuttingBoardSlicingRecipe> manager, ResourceLocation id, IDecomposedRecipe recipe)
+    public Optional<CuttingBoardSlicingRecipe> recompose(IRecipeManager<? super CuttingBoardSlicingRecipe> manager, RegistryAccess registryAccess, IDecomposedRecipe recipe)
     {
         Ingredient input = recipe.getOrThrowSingle(BuiltinRecipeComponents.Input.INGREDIENTS).asVanillaIngredient();
         String group = recipe.getOrThrowSingle(BuiltinRecipeComponents.Metadata.GROUP);
         ItemStack output = recipe.getOrThrowSingle(BuiltinRecipeComponents.Output.ITEMS).getInternal();
-        return Optional.of(new CuttingBoardSlicingRecipe(id, group, input, output));
+        return Optional.of(new CuttingBoardSlicingRecipe(group, input, output));
     }
 }
