@@ -7,11 +7,12 @@ import com.blamejared.crafttweaker.api.recipe.handler.IRecipeHandler;
 import com.blamejared.crafttweaker.api.recipe.manager.base.IRecipeManager;
 import com.blamejared.crafttweaker.api.util.StringUtil;
 import com.mrcrayfish.furniture.refurbished.crafting.RecycleBinRecyclingRecipe;
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.core.NonNullList;
+import net.minecraft.core.RegistryAccess;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Recipe;
+import net.minecraft.world.item.crafting.RecipeHolder;
 
-import java.util.Arrays;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -22,13 +23,14 @@ import java.util.stream.Collectors;
 public class RecycleBinRecyclingRecipeHandler implements IRecipeHandler<RecycleBinRecyclingRecipe>
 {
     @Override
-    public String dumpToCommandString(IRecipeManager<? super RecycleBinRecyclingRecipe> manager, RecycleBinRecyclingRecipe recipe)
+    public String dumpToCommandString(IRecipeManager<? super RecycleBinRecyclingRecipe> manager, RegistryAccess registryAccess, RecipeHolder<RecycleBinRecyclingRecipe> holder)
     {
-        return String.format("%s.addRecipe(%s, %s, %s);",
-                manager.getCommandString(),
-                StringUtil.quoteAndEscape(recipe.getId()),
-                IItemStack.ofMutable(recipe.getInput()).getCommandString(),
-                "[" + String.join(", ", Arrays.stream(recipe.getOutputs()).map(stack -> IItemStack.ofMutable(stack).getCommandString()).toArray(String[]::new)) + "]");
+        return "%s.addRecipe(%s, %s, %s);".formatted(
+            manager.getCommandString(),
+            StringUtil.quoteAndEscape(holder.id()),
+            IItemStack.ofMutable(holder.value().getInput()).getCommandString(),
+            "[" + String.join(", ", holder.value().getOutput().stream().map(stack -> IItemStack.ofMutable(stack).getCommandString()).toArray(String[]::new)) + "]"
+        );
     }
 
     @Override
@@ -40,20 +42,20 @@ public class RecycleBinRecyclingRecipeHandler implements IRecipeHandler<RecycleB
     }
 
     @Override
-    public Optional<IDecomposedRecipe> decompose(IRecipeManager<? super RecycleBinRecyclingRecipe> manager, RecycleBinRecyclingRecipe recipe)
+    public Optional<IDecomposedRecipe> decompose(IRecipeManager<? super RecycleBinRecyclingRecipe> manager, RegistryAccess registryAccess, RecycleBinRecyclingRecipe recipe)
     {
         IDecomposedRecipe decomposedRecipe = IDecomposedRecipe.builder()
-                .with(BuiltinRecipeComponents.Input.INGREDIENTS, IItemStack.of(recipe.getInput()))
-                .with(BuiltinRecipeComponents.Output.ITEMS, Arrays.stream(recipe.getOutputs()).map(IItemStack::ofMutable).collect(Collectors.toList()))
-                .build();
+            .with(BuiltinRecipeComponents.Input.INGREDIENTS, IItemStack.of(recipe.getInput()))
+            .with(BuiltinRecipeComponents.Output.ITEMS, recipe.getOutput().stream().map(IItemStack::ofMutable).collect(Collectors.toList()))
+            .build();
         return Optional.of(decomposedRecipe);
     }
 
     @Override
-    public Optional<RecycleBinRecyclingRecipe> recompose(IRecipeManager<? super RecycleBinRecyclingRecipe> manager, ResourceLocation id, IDecomposedRecipe recipe)
+    public Optional<RecycleBinRecyclingRecipe> recompose(IRecipeManager<? super RecycleBinRecyclingRecipe> manager, RegistryAccess registryAccess, IDecomposedRecipe recipe)
     {
         ItemStack input = recipe.getOrThrowSingle(BuiltinRecipeComponents.Input.INGREDIENTS).asVanillaIngredient().getItems()[0];
         ItemStack[] output = recipe.get(BuiltinRecipeComponents.Output.ITEMS).stream().map(IItemStack::getInternal).toArray(ItemStack[]::new);
-        return Optional.of(new RecycleBinRecyclingRecipe(id, input, output));
+        return Optional.of(new RecycleBinRecyclingRecipe(input, NonNullList.of(ItemStack.EMPTY, output)));
     }
 }
