@@ -9,11 +9,13 @@ import com.blamejared.crafttweaker.api.recipe.manager.base.IRecipeManager;
 import com.blamejared.crafttweaker.api.util.IngredientUtil;
 import com.blamejared.crafttweaker.api.util.StringUtil;
 import com.mrcrayfish.furniture.refurbished.crafting.ToasterHeatingRecipe;
+import net.minecraft.core.RegistryAccess;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.CookingBookCategory;
 import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.item.crafting.Recipe;
+import net.minecraft.world.item.crafting.RecipeHolder;
 
 import java.util.Optional;
 
@@ -24,15 +26,16 @@ import java.util.Optional;
 public class ToasterHeatingRecipeHandler implements IRecipeHandler<ToasterHeatingRecipe>
 {
     @Override
-    public String dumpToCommandString(IRecipeManager<? super ToasterHeatingRecipe> manager, ToasterHeatingRecipe recipe)
+    public String dumpToCommandString(IRecipeManager<? super ToasterHeatingRecipe> manager, RegistryAccess registryAccess, RecipeHolder<ToasterHeatingRecipe> holder)
     {
-        return String.format("%s.addRecipe(%s, %s, %s, %s, %s);",
-                manager.getCommandString(),
-                StringUtil.quoteAndEscape(recipe.getId()),
-                IIngredient.fromIngredient(recipe.getInput()).getCommandString(),
-                IItemStack.ofMutable(recipe.getOutput()).getCommandString(),
-                recipe.getExperience(),
-                recipe.getCookingTime());
+        return "%s.addRecipe(%s, %s, %s, %s, %s);".formatted(
+            manager.getCommandString(),
+            StringUtil.quoteAndEscape(holder.id()),
+            IIngredient.fromIngredient(holder.value().getInput()).getCommandString(),
+            IItemStack.ofMutable(holder.value().getOutput()).getCommandString(),
+            holder.value().getExperience(),
+            holder.value().getCookingTime()
+        );
     }
 
     @Override
@@ -45,21 +48,21 @@ public class ToasterHeatingRecipeHandler implements IRecipeHandler<ToasterHeatin
     }
 
     @Override
-    public Optional<IDecomposedRecipe> decompose(IRecipeManager<? super ToasterHeatingRecipe> manager, ToasterHeatingRecipe recipe)
+    public Optional<IDecomposedRecipe> decompose(IRecipeManager<? super ToasterHeatingRecipe> manager, RegistryAccess registryAccess, ToasterHeatingRecipe recipe)
     {
         IDecomposedRecipe decomposedRecipe = IDecomposedRecipe.builder()
-                .with(BuiltinRecipeComponents.Input.INGREDIENTS, IIngredient.fromIngredient(recipe.getInput()))
-                .with(BuiltinRecipeComponents.Output.ITEMS, IItemStack.ofMutable(recipe.getOutput()))
-                .with(BuiltinRecipeComponents.Output.EXPERIENCE, recipe.getExperience())
-                .with(BuiltinRecipeComponents.Processing.TIME, recipe.getCookingTime())
-                .with(BuiltinRecipeComponents.Metadata.GROUP, recipe.getGroup())
-                .with(BuiltinRecipeComponents.Metadata.COOKING_BOOK_CATEGORY, recipe.category())
-                .build();
+            .with(BuiltinRecipeComponents.Input.INGREDIENTS, IIngredient.fromIngredient(recipe.getInput()))
+            .with(BuiltinRecipeComponents.Output.ITEMS, IItemStack.ofMutable(recipe.getOutput()))
+            .with(BuiltinRecipeComponents.Output.EXPERIENCE, recipe.getExperience())
+            .with(BuiltinRecipeComponents.Processing.TIME, recipe.getCookingTime())
+            .with(BuiltinRecipeComponents.Metadata.GROUP, recipe.getGroup())
+            .with(BuiltinRecipeComponents.Metadata.COOKING_BOOK_CATEGORY, recipe.category())
+            .build();
         return Optional.of(decomposedRecipe);
     }
 
     @Override
-    public Optional<ToasterHeatingRecipe> recompose(IRecipeManager<? super ToasterHeatingRecipe> manager, ResourceLocation id, IDecomposedRecipe recipe)
+    public Optional<ToasterHeatingRecipe> recompose(IRecipeManager<? super ToasterHeatingRecipe> manager, RegistryAccess registryAccess, IDecomposedRecipe recipe)
     {
         Ingredient input = recipe.getOrThrowSingle(BuiltinRecipeComponents.Input.INGREDIENTS).asVanillaIngredient();
         String group = recipe.getOrThrowSingle(BuiltinRecipeComponents.Metadata.GROUP);
@@ -67,6 +70,6 @@ public class ToasterHeatingRecipeHandler implements IRecipeHandler<ToasterHeatin
         ItemStack output = recipe.getOrThrowSingle(BuiltinRecipeComponents.Output.ITEMS).getInternal();
         float experience = recipe.getOrThrowSingle(BuiltinRecipeComponents.Output.EXPERIENCE);
         int cookingTime = recipe.getOrThrowSingle(BuiltinRecipeComponents.Processing.TIME);
-        return Optional.of(new ToasterHeatingRecipe(id, group, category, input, output, experience, cookingTime));
+        return Optional.of(new ToasterHeatingRecipe(group, category, input, output, experience, cookingTime));
     }
 }
